# mindframe

./: .buildpacks  .dockerignore  .gitignore  .pre-commit-config.yaml  Aptfile  Dockerfile  Dockerfile.prod  Dockerfile.staging  LICENSE  Procfile  Procfile.dev  README.md  ROADMAP.md  SETUP.md  TODO  app.json  apt-packages  chatbot.py  entrypoint.sh  init-project.sh  pyproject.toml  requirements.txt  setup.py  telegram_audiorequest.pickle  telegram_imagerequest.pickle  telegram_textrequest.pickle  telegram_videorequest.pickle
actionable/: apps.py  mixins.py  urls.py  views.py
compose/: app.yml  base.yml  constraints.yml  create-database.sh  development.yml  live.yml  local-dev.yml  mindframe.yml  networks.yml  production.yml  psychologytools.yml  secrets.env-example  services.yml  staging.yml  tankeram.yml
config/: asgi.py  celery.py  settings.py  urls.py
demo-website/: Dockerfile  app.json  magtest.py  pyproject.toml  requirements.txt
demo-website/src/: Procfile  env-example  gradio_app.py
demo-website/src/config/: celery.py  dokku config.sh  settings.py  urls.py  wsgi.py
demo-website/src/fixtures/: exampledb.json
demo-website/src/templates/magiclink/: login.html  login_failed.html  login_sent.html
demo-website/src/templates/registration/: logged_out.html
deploy/: dev.sh  dokku-app-install.sh  dokku-install.sh  local-development.sh  reset-local-database-perms.sql  snapshot-live-db.sh  staging.sh
docs/: 2024-10-09_architecture.md  Gemfile  Untitled-2024-11-13-1232-15.excalidraw  Untitled-2024-11-13-1232-42.excalidraw  _config.yml  architecture.md  categorising-the-literature.md  dag-style  deploy.md  development.md  fit-outline.md  fit.mermaid  fit.yaml  goal_example_practice_planned.md  icons.svg-txt  implementation-notes.md  index.md  learning-how-to-be-a-fake-client.md  main-dag.excalidraw  msc-student-project-descriptions.md  presentation.qmd  simplifying-therapist-talk.md  syntax-example.judgement  syntax-example.step  syntax.md  syntax2.md  typical-client.md  typical-client.mfmd  unused.md  writing-steps-and-goals.md
docs/fit/: affect-measurement-likert.question  affect-measurement.question  affect-measurement.step  asking-open-questions.example  basic-safety.evaluation  basic-safety.judgement  build-motivation-discrepancy.step  clarify-measurement.step  config.yaml  core_concepts.theory  discrepancy.judgement  elicit-discrepancy.step  embed-motivation.step  end-intervention.step  examples-default.jinja2  formulation.note  imagery.example  past-future-discrepancy.evaluation  recap.step  step1.step  summarise-step.memory  summarise-step.note  syntax-example.judgement  turns-default.jinja2  unused.md
docs/mi/: README.md  _common.md  _output.md  _tag_use.md  engaging.md  fakeclient.md  focussing.md  judgement_eng-to-foc.md  judgement_style.md  mi_setup.md  patient0.md  setup-consent.md
docs/papers/: introducing-mindframe-paper.md
docs/prompting-examples/: deduro-2024-counselllme.md  kim-et-al-2024-cbt.md  kiss.md  list-mi-techniques.md  taxonomy-prompt-styles.md
docs/wireframes/: enhanced-chatbot-ui.excalidraw
docs_/: architecture.md  fit-outline.md  fit.mermaid  fit.yaml  index.md  learning-how-to-be-a-fake-client.md  simplifying-therapist-talk.md  syntax.md  syntax2.md  third-party-prompts.md  unused.md  writing-steps-and-goals.md
docs_/fit/: affect-measurement-likert.question  affect-measurement.question  asking-open-questions.example  basic-safety.judgement  clarify-measurement.step  elicit-discrepancy.step  recap.step  summarise-step.note
docs_/mi/: _output.md  engaging.md  judgement-mi_setup.md  judgement-move_focussing.md  setup_2.md
docs_/papers/: introducing-mindframe-paper.md
docs_/prompting-examples/: deduro-2024-counselllme.md  kim-et-al-2024-cbt.md  kiss.md  list-mi-techniques.md  taxonomy-prompt-styles.md
llmtools/: admin.py  api.py  apps.py  extract.py  langfuse_api.py  llm_calling.py  models.py  return_type_models.py  rules.py  tasks.py  tests.py  urls.py  views.py
llmtools/migrations/: 0001_initial.py  0002_initial.py  0002_jobgroup_job.py  0002_toolkey.py  0003_alter_job_group_alter_job_source_file.py  0003_alter_tool_prompt.py  0004_job_result.py  0004_jobgroup_owner.py  0005_alter_job_options_alter_jobgroup_options_job_created_and_more.py  0006_remove_job_source_job_context_job_tool_and_more.py  0007_alter_job_group.py  0008_job_cancelled_alter_tool_include_source_and_more.py  0009_jobgroup_cancelled.py  0010_alter_jobgroup_options.py  0011_remove_jobgroup_complete.py  0012_jobgroup_uuid.py  0012_llmcredentials_llm.py  0013_alter_tool_model.py  0014_alter_tool_model.py  0015_llmcredentials_label.py  0016_auto_20250528_1315.py  0017_tool_credentials_alter_tool_model.py  0018_alter_llmcredentials_llm_api_key_and_more.py  0018_remove_llm_credentials.py  0019_alter_llmcredentials_options.py  0019_jobgroup_uuid.py
llmtools/templates/: jobgroup_detail.html  tool_form.html  tool_result.html
llmtools/tests/: test_llm_calls_parallel.py
mindframe/: admin.py  apps.py  bot.py  budgeting.py  celery.py  chat_urls.py  chatbot.py  checks.py  chunking.py  conversation.py  converse.py  embed.py  export_drf.py  graphing.py  helpers.py  import_export.py  langfuse_helpers.py  llama-magentic-test.py  llm_calling.py  llm_costs.py  loading_json_schemas_pydantic.py  matrix.py  matrix2.py.py  mi.md  models-to-reimplement.py  models.py  multipart_llm.py  parsing.py  rag.py  return_type_models.py  scratch.py  settings.py  shortuuidfield.py  silly.py  structured_judgements.py  synthetic.py  tasks.py  telegram.md  telegram.py  telegramold.py  (+3 more)
mindframe-lang/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
mindframe-lang/syntaxes/: mindframe.tmLanguage.json
mindframe-lang/themes/: mindframe-theme.json
mindframe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mindframe/fixtures/: demo.json  demo.yaml  test.json
mindframe/migrations/: 0001_initial.py  0002_alter_note_uuid_alter_turn_uuid.py  (+150 more)
scripts/: clean_db_for_fixtures.py
synapse/: docker-setup.sh
tests/: test_main.py
(+59 files in other folders)
