[tool.poetry]
name = "mindframe"
version = "0.1.20"
description = "A Python package for the `mindframe` project"
authors = [
    "Ben Whalley <ben.whalley@plymouth.ac.uk>",
    "Ali Bidaran <ali@example.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

black = "^24.4.2"
boto3 = "^1.34.119"
celery = "^5.4.0"
colorlog = "^6.9.0"
crispy-bootstrap5= "^2024.10"
dj-database-url = "^2.1.0"
Django = "^5.0.6"
django-autoslug = "^1.9.9"
django-compressor = "^4.4"
django-crispy-forms="^2.3"
django-debug-toolbar = "^4.4.2"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
django-hijack = "^3.5.1"
django-lifecycle = "^1.2.4"
django-magiclink = {git = "https://github.com/benwhalley/django-magiclink.git"}
django-shortuuidfield = "^0.1.3"
django-storages = "^1.14.3"
djmail = "^2.0.0"
gradio = "^5.5.0"
haystack-ai = "^2.9.0"
haystack-experimental="0.3.0"
instructor = "^1.6.4"
ipython = "^8.29.0"
langchain = "^0.3.11"
langfuse = "^2.56.2"
pandoc = "^2.4"
pgvector = "*"
pgvector-haystack = "^1.2.0"
poetry-plugin-export = "^1.8.0"
psycopg2 = {markers = "sys_platform == 'linux'", version = "~=2.9"}
psycopg2_binary = {markers = "sys_platform == 'darwin'", version = "~=2.9"}
pydantic = "^2.9.2"
python-box = "^7.2.0"
python-decouple = "^3.8"
python-magic = "^0.4.27"
redis = "^5.2"
ruamel-yaml = "^0.18.6"
rules = "^3.4"
setuptools = "*"
shortuuid = "^1.0.13"
tiktoken = "^0.8.0"
uvicorn = "^0.30.1"
watchdog = "^4.0.1"
werkzeug = "^3.0.3"
whitenoise = "^6.6.0"
nltk = "^3.9.1"
django-ninja = "^1.3.0"
treebeard = "^0.1.1"

[tool.poetry.scripts]
mindframe-bot = "mindframe.chatbot:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
force_single_line = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
