# uv pip compile pyproject.toml -o requirements.txt
[project]
name = "mindframe"
version = "0.2.3"
description = "A Python package for the `mindframe` project"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "Ben Whalley", email = "ben.whalley@plymouth.ac.uk"}
]

dependencies = [
  "celery>=5.4.0",
  "colored>=2.3.0",
  "colorlog>=6.9.0",
  "crispy-bootstrap5>=2024.10",
  "dateparser>=1.2.1",
  "dj-database-url>=2.3.0",
  "django>=5.1.6",
  "django-autoslug>=1.9.9",
  "django-celery-beat>=2.7.0",
  "django-compressor>=4.5.1",
  "django-crispy-forms>=2.3",
  "django-debug-toolbar>=5.0.1",
  "django-environ>=0.12.0",
  "django-extensions>=3.2.3",
  "django-lifecycle>=1.2.4",
  "django-markdownit>=0.5.0",
  "django-model-utils>=5.0.0",
  "django-ninja>=1.3.0",
  "django-shortuuidfield>=0.1.3",
  "django-storages>=1.14.5",
  "django-treebeard>=4.7.1",
  "djmail>=2.0.0",
  "gradio>=5.17.0",
  "gunicorn>=23.0.0",
  "haystack-ai>=2.10.3",
  "instructor>=1.7.2",
  "ipython>=8.32.0",
  "langchain>=0.3.25",
  "langfuse>=2.59.3",
  "moviepy>=2.1.2",
  "openpyxl>=3.1.5",
  "pandoc>=2.4",
  "pdfplumber>=0.11.6",
  "pgvector>=0.3.6",
  "pgvector-haystack>=2.0.0",
  "psycopg2-binary ~=2.9",
  "pydantic>=2.10.6",
  "python-box>=7.3.2",
  "python-decouple>=3.8",
  "python-docx>=1.1.2",
  "python-magic>=0.4.27",
  "python-telegram-bot>=21.10",
  "recurrent>=0.4.1",
  "redis>=5.2.1",
  "requests>=2.32.3",
  "ruamel-yaml>=0.18.10",
  "rules>=3.5",
  "setuptools>=75.8.0",
  "shortuuid>=1.0.13",
  "tiktoken>=0.9.0",
  "uvicorn>=0.34.0",
  "watchdog[watchmedo]>=6.0.0",
  "watchfiles>=1.0.4",
  "werkzeug>=3.1.3",
  "whitenoise>=6.9.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "honcho>=2.0.0",
]
