[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
force_single_line = true

[tool.poetry]
package-mode = false
name = "mfdemo"
description = ""
authors = ["Ben Whalley"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dj-database-url = "^2.1.0"
django-shortuuidfield = "^0.1.3"
python-magic = "^0.4.27"
djmail = "^2.0.0"
django-storages = "^1.14.3"
django-autoslug = "^1.9.9"
boto3 = "^1.34.119"
django-extensions = "^3.2.3"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
django-lifecycle = "^1.2.3"
django-formtools = "^2.5.1"
whisper = "^1.1.10"
rules = "^3.4"
django-markdown-deux = "^1.0.6"
martor = "^1.6.44"
django-select2 = "^8.1.2"
django-autocomplete-light = "^3.11.0"
django-compressor = "^4.4"
whitenoise = "^6.6.0"
honcho = "^1.1.0"
uvicorn = "^0.30.1"
gevent = "^24.2.1"
django-cache-memoize = "^0.2.0"
werkzeug = "^3.0.3"
watchdog = "^4.0.1"
python-dotenv = "^1.0.1"
pydub = "^0.25.1"
moviepy = "^1.0.3"
ffmpeg-python = "^0.2.0"
poetry-plugin-export = "^1.8.0"
django-magiclink = {git = "https://github.com/benwhalley/django-magiclink.git"}
celery = "^5.4.0"
black = "^24.4.2"
gunicorn = "^22.0.0"
django-environ = "^0.11.2"
django-debug-toolbar = "^4.4.2"
psycopg2 = "^2.9.9"
llm = "^0.16"
redis = "^5.0.6"
django-hijack = "^3.5.1"
magentic = "^0.32.0"
Django = "^5.0.6"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
django-anymail = "^12.0"
mindframe = {path = "../", develop = true}
pydantic = "^2.9.2"
pandoc = "^2.4"
litellm = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
